--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -115,3 +115,11 @@
   config: *ablitity_config
   effect:
     - effect_ability_ice_damage_boost_15_percent
+- id: mark_ability_anying
+  config: *ablitity_config
+  effect:
+    - effect_ability_heal_half_damage_when_rage_less_than_opponent
+- id: mark_ability_guangming
+  config: *ablitity_config
+  effect:
+    - effect_ability_heal_1_8_max_hp_when_rage_greater_than_opponent
