--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -4476,3 +4476,260 @@
   tags: []
   effect:
     - effect_skill_add_mark_hanbingjia
+- id: skill_kongjuzhinian
+  element: Shadow
+  category: Special
+  target: opponent
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_kongjuzhinian
+- id: skill_yingren
+  element: Shadow
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_plus_50_if_foe_has_kongjuzhinian
+- id: skill_heian
+  element: Shadow
+  category: Status
+  target: opponent
+  power: 0
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_mingzhongxiajiang_15
+- id: skill_ezuoju
+  element: Shadow
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage
+- id: skill_anyingzhiguang
+  element: Shadow
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_anyingzhiguang
+- id: skill_pojian
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_crit_if_foe_has_2_kongjuzhinian
+- id: skill_huianxiezouqu
+  element: Shadow
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_fixed_damage_6_percent_max_hp
+- id: skill_anyingzhiwu
+  element: Shadow
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_anzhilingyu_or_anyinglingyu
+    - effect_skill_raise_atk_1_stage_if_anyinglingyu
+- id: skill_anyinglingyu
+  element: Shadow
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_anzhilingyu_or_anyinglingyu
+- id: skill_xieniu
+  element: Shadow
+  category: Status
+  target: opponent
+  power: 0
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage
+    - effect_skill_reduce_foe_spd_1_stage
+# 光伊特技能
+- id: skill_shanguangqiu
+  element: Light
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shiming_if_first
+- id: skill_shanguangqie
+  element: Light
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_first
+- id: skill_juguang
+  element: Light
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stages
+- id: skill_jinghuazhiguang
+  element: Light
+  category: Status
+  target: opponent
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_foe_clear_stage
+- id: skill_guanghuizhiying
+  element: Light
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_guanghuizhiying
+- id: skill_guangsuqie
+  element: Light
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+- id: skill_zhongjishanguangpao
+  element: Light
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_1_6_max_hp
+- id: skill_guangzhilingyu
+  element: Light
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_guangzhilingyu_or_guanghuilingyu
+- id: skill_guanghuiluanwu
+  element: Light
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_guangzhilingyu_or_guanghuilingyu
+    - effect_skill_heal_quarter_if_guanghuilingyu
+- id: skill_baiguangqie
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_crit_if_first
+- id: skill_guangyinghuanxiang
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 125
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: ['combination']
+  multihit: 2
+  effect:
+    - effect_skill_set_weather_qingtian_or_yemu
