--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -143,3 +143,11 @@ mark_shandianwaiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@mai
 mark_bingningzhiqi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3091.png'
 mark_bingshuangzhixing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3092.png'
 mark_hanbingjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4005.png'
+mark_kongjuzhinian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3103.png'
+mark_anyingzhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3104.png'
+mark_anzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3105.png'
+mark_anyinglingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3106.png'
+mark_guanghuizhiying: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3137.png'
+mark_guangzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3138.png'
+mark_guanghuilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3139.png'
+mark_global_yemu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20009.png'
