--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -370,3 +370,24 @@ skill_jibingqianliepuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource
 skill_bingzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
 skill_bingtiandixue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
 skill_hanbingjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_kongjuzhinian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_yingren: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
+skill_heian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_ezuoju: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
+skill_anyingzhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_pojian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
+skill_huianxiezouqu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10593.mp3'
+skill_anyingzhiwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_anyinglingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_xieniu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_shanguangqiu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_002.mp3'
+skill_shanguangqie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_001.mp3'
+skill_juguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_3_003.mp3'
+skill_jinghuazhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_3_002.mp3'
+skill_guanghuizhiying: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_2_003.mp3'
+skill_guangsuqie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_003.mp3'
+skill_zhongjishanguangpao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10797.mp3'
+skill_guangzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_3_002.mp3'
+skill_guanghuiluanwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_003.mp3'
+skill_baiguangqie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/12_1_001.mp3'
+skill_guangyinghuanxiang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10597.mp3'
