--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -54,9 +54,10 @@
     "pinia-plugin-persistedstate": "^4.3.0",
     "rxjs": "^7.8.2",
     "seer2-pet-animator": "^0.0.30",
+    "sortablejs": "^1.15.6",
+    "sortablejs-vue3": "^1.2.11",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
-    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1",
     "yaml": "^2.7.1",
     "zod": "^3.24.4"
