--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -55,8 +55,8 @@ skill_qianghuazhuangtai: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resourc
 skill_xianfazhiren: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
 skill_shouxiawuqing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
 skill_meihuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
-skill_ruilishuxian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
-skill_chianguangbo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_ruilishexian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_chihuanguangbo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
 skill_houfazhiren: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
 skill_shanbi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
 skill_huanjinglieshanguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10062.mp3'
