--- a/data/species.yaml
+++ b/data/species.yaml
@@ -1894,7 +1894,7 @@
     - skill_id: skill_fengli
       level: 27
       hidden: false
-    - skill_id: skill_huoqulianshe
+    - skill_id: skill_huoqiulianshe
       level: 32
       hidden: false
   ability:
@@ -1942,7 +1942,7 @@
     - skill_id: skill_fengli
       level: 27
       hidden: false
-    - skill_id: skill_huoqulianshe
+    - skill_id: skill_huoqiulianshe
       level: 32
       hidden: false
     - skill_id: skill_guailiqian
@@ -2132,7 +2132,7 @@
     - skill_id: skill_huozhiya
       level: 17
       hidden: false
-    - skill_id: skill_huoqulianshe
+    - skill_id: skill_huoqiulianshe
       level: 22
       hidden: false
 - id: pet_chiyanshou
@@ -2174,7 +2174,7 @@
     - skill_id: skill_huozhiya
       level: 17
       hidden: false
-    - skill_id: skill_huoqulianshe
+    - skill_id: skill_huoqiulianshe
       level: 22
       hidden: false
     - skill_id: skill_lieyanzhuangji
