--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 # CORS 配置
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 
+# 在线对战服务器配置
+BATTLE_SERVER_URL=ws://localhost:8102
+
 # Supabase 配置
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
