--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@arcadia-eternity/server": "workspace:^",
     "commander": "^13.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "i18next": "^24.2.3",
     "pino": "^9.6.0",
