--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,23 @@ SUPABASE_SERVICE_KEY=your_supabase_service_role_key
 
 # 前端 API 配置
 VITE_API_BASE_URL=http://localhost:8102/api/v1
+
+# 邮件服务配置
+EMAIL_PROVIDER=console
+EMAIL_FROM=noreply@yuuinih.com
+EMAIL_FROM_NAME=阿卡迪亚永恒
+
+# SMTP 配置（当 EMAIL_PROVIDER=smtp 时使用）
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+
+# SendGrid 配置（当 EMAIL_PROVIDER=sendgrid 时使用）
+SENDGRID_API_KEY=your-sendgrid-api-key
+
+# AWS SES 配置（当 EMAIL_PROVIDER=ses 时使用）
+AWS_SES_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
