--- a/packages/web-ui/.env.example
+++ b/packages/web-ui/.env.example
@@ -1,5 +1,8 @@
 # API 基础 URL
-VITE_API_BASE_URL=http://localhost:8102/api/v1
+VITE_API_BASE_URL=http://localhost:8107/api/v1
+
+# WebSocket URL (战斗服务器)
+VITE_WS_URL=http://localhost:8107
 
 # Supabase 配置（如果前端直接连接）
 VITE_SUPABASE_URL=your_supabase_project_url
