--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,7 +17,9 @@
     "watch:code": "rollup -c --watch",
     "watch:types": "tsc --emitDeclarationOnly --watch --preserveWatchOutput",
     "watch": "run-p watch:code watch:types",
-    "build:types": "tsc --emitDeclarationOnly"
+    "build:types": "tsc --emitDeclarationOnly",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm start"
   },
   "keywords": [],
   "author": "yuuinih",
@@ -29,12 +31,24 @@
     "@arcadia-eternity/parser": "workspace:^",
     "@arcadia-eternity/protocol": "workspace:^",
     "@arcadia-eternity/schema": "workspace:^",
+    "@aws-sdk/client-sesv2": "^3.828.0",
+    "@types/handlebars": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "handlebars": "^4.7.8",
+    "inversify": "^6.0.2",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
+    "nodemailer": "^7.0.3",
     "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.17"
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^22.15.17",
+    "@types/nodemailer": "^6.4.17",
+    "rollup-plugin-copy": "^3.5.0"
   }
 }
