--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -43,12 +43,16 @@
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22.15.17",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "rollup-plugin-copy": "^3.5.0"
   }
 }
